--- a/dns-01/k8s-certmgr-le-prod-dns01-clissuer.yaml
+++ b/dns-01/k8s-certmgr-le-prod-dns01-clissuer.yaml
@@ -5,20 +5,18 @@ metadata:
 spec:
   acme:
     server: https://acme-v02.api.letsencrypt.org/directory
-    email: EpiphanyCICDAdmins@ABB.onmicrosoft.com
+    email: admins@example.com
     privateKeySecretRef:
       name: le-prod-privkey
     solvers:
     - dns01:
         azureDNS:
-          clientID: 7da8554a-1623-4d7c-bb21-4c07f92f3cda
+          clientID: xxxxxxxxxxxxxxxxxxxxxxxxx
           clientSecretSecretRef:
             name: azuredns-config
             key: client-secret
-          subscriptionID: 9f922c49-ff04-4442-881d-67aefdf572da
-          tenantID: 372ee9e0-9ce0-4033-a64a-c07073a91ecd
+          subscriptionID: xxxxxxxxxxxxxxxxxxxxxxxxx
+          tenantID: xxxxxxxxxxxxxxxxxxxxxxxxx
           resourceGroupName: cbs-dns-rg
-          hostedZoneName: cbs.hasops.com
+          hostedZoneName: dnszone.example.com
           environment: AzurePublicCloud
-
-# Ingres musi mieć metadata/ annotations/ cert-manager.io/cluster-issuer: le-prod-dns-clisr
